--- a/css/insertar.css
+++ b/css/insertar.css
@@ -126,6 +126,7 @@ footer{
 }
 .formulario__input, .formulario__btn{
 	transition: all 0.3s ease-in-out;
+
 }
 .formulario__input::placeholder{
 	color: var(--color-shadow);
@@ -195,6 +196,7 @@ footer{
 	border: none;
 	font-weight: 800;
 	box-shadow: 3px 3px 0px 0px var(--button-hover);
+	display: none;
 }
 
 .formulario__btn:hover {
