--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,8 @@ button{
 /* Estilos Estructurales */
 .container{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: minmax(150px,auto) repeat(3,1fr) minmax(100px,auto);
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: minmax(150px,auto) repeat(2,1fr) minmax(100px,auto);
     height: 100vh;
     width: 100vw;
     border-radius: 10px;
@@ -36,13 +36,13 @@ button{
 }
 header{
     margin: .5rem;
-    grid-column: 1/5;
+    grid-column: 1/7;
     border-radius: 10px;
 }
 main{
     margin: .5rem;
-    grid-column: 1/4;
-    grid-row: 2/5;
+    grid-column: 1/6;
+    grid-row: 2/3;
     border-radius: 10px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -60,24 +60,29 @@ main{
 }
 .switch-mode{
     grid-column: 1/2;
-    grid-row: 4/5;
+    grid-row: 3/6;
     border-radius: 10px;
 }
 .generate{
-    grid-column: 2/6;
-    grid-row: 4/5;
+    grid-column: 2/4;
+    grid-row: 3/4;
     border-radius: 10px;
+}
+.import{
+  grid-column: 4/6;
+  grid-row:3/4;
+  border-radius: 10px;
 }
 aside{
     margin: .5rem;
-    grid-column: 4/5;
-    grid-row: 2/5;
+    grid-column: 6/7;
+    grid-row: 2/6;
     border-radius: 10px;
 }
 footer{
     margin: .5rem;
-    grid-column: 1/5;
-    grid-row: 5/6;
+    grid-column: 2/6;
+    grid-row: 4/5;
     border-radius: 10px;
 }
 /* Barra de carga */
@@ -273,7 +278,7 @@ footer{
 
 /* Insert Consult Generate*/
 
-.insert,.consult,.generate{
+.insert,.consult,.generate,.import{
   height: 100%;
   width: 100%;
   display: flex;
