--- a/css/importarExcel.css
+++ b/css/importarExcel.css
@@ -88,24 +88,43 @@ input, select, textarea {
     transition: transform 400ms, box-shadow 400ms;
     background-color: var(--cards-light); /* Fondo por defecto */
 }
-.import-input{
-    /* opacity: 0; */
-    z-index: 1;
-    position: relative;
-    right: 315px;
-    bottom: 475px;
-    cursor: pointer;
+input[type="file"]{
+    display: none;
 }
-/* .import-text{
-
-} */
-.import-btn{
+.input-file-label{
+    display: inline-block;
+    text-transform: uppercase;
+    color: #fff;
+    background: #f34a56;
+    text-align: center;
+    padding: 1rem 1.8rem;
     border-radius: 10px;
-    height: 40px;
-    width: 200px;
-    font-size: 1.1rem;
-    font-weight: 600;
-    background-color: var(--bg-main-light);
-    color: var(--text-main-light);
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    font-size: 1.2rem;
+    letter-spacing: .1rem;
+    user-select: none;
+    cursor: pointer;
+    box-shadow: 5px 5px 0 0 rgba(13, 46, 230, 0.308);
+}
+.input-file-label:active{
+    transform: scale(0.9);
+}
+.upload-btn{
+    display: inline-block;
+    margin-top: 1rem;
+    background: #4caf50;
+    color:#fff;
+    border: none;
+    padding: .8rem 1.5rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    box-shadow: 5px 5px 0 0 rgba(13, 46, 230, 0.308);
+    transition: all .2s ease;
+    border-radius: 10px;
+}
+.upload-btn:hover{
+    background: #45a049;
+}
+.upload-btn:active{
+    transform: scale(0.9);
 }
