--- a/css/consulta.css
+++ b/css/consulta.css
@@ -1,9 +1,12 @@
-
 .section-1{
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
-    border: none;
+    height: 100dvh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
 }
 .form-item{
     padding: 1rem;
@@ -24,10 +27,11 @@
     height: 80vh;
     width: 100%;
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    border: none;
 }
 .consult-btn{
-    background-color: rgb(37, 131, 37);
-    color: var(--text-main-light);
+    background-color: #c5a53c;
+    color: var(--text);
     padding: 1rem;
     border-radius: 22px;
     width: 8rem;
@@ -73,11 +77,7 @@
     border: none;
     cursor: pointer;
 }
-.terminal-button{
-    background-color: #0d54a4;
-    border-radius: 22px;
-    border: none;
-}
+
 .form-text{
     font-size: 1.3rem;
     font-weight: 500;
@@ -85,68 +85,50 @@
     text-align: center;
     margin: .5rem;
 }
-.datos-consulta-container{
+.text-data-container{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: 100px 1fr 100px;
-    gap: 20px;
-    border-radius: 22px;
-}
-.empleado-text{
-    grid-column: 1/3;
-    grid-row: 1/2;
-}
-.ul-empleado{
-    grid-column: 1/2;
-    grid-row: 2/3;
-    height: 100%;
-    width: 100%;
-}
-.error-panel-footer {
-    padding: 12px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-.ul-previsional{
-    grid-column: 2/3;
-    grid-row: 2/3;
-    height: 100%;
-    width: 100%;
+    grid-template-rows: 1fr;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 14px;
+    padding: 1rem;
+    background-color:#c5a53c;
 }
 .ul-previsional,.ul-empleado{
     margin: 1rem;
 }
 .li-empleado,.li-previsional{
-    margin: 1.3rem;
+    margin: .5rem;
     border: none;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    height: 50px;
     font-size: 1.2rem;
     font-family: Ubuntu,-apple-system, sans-serif;
     font-weight: 700;
     text-decoration: none;
     list-style: none;
     text-align: center;
+    background-color: #423826;
 }
 .empleado-text,.previsional-text{
     text-align: center;
     padding: 1rem;
     margin: .4rem;
     background-color: #0a0d2077;
-    font-size: 2.2rem;
+    font-size: 2rem;
     font-weight: 550;
     border-radius: 22px;
 }
 .ul-text{
     text-align: center;
-    padding: .9rem;
+    padding: .5rem;
+    text-align: center;
+    color: #e9e9e9;
 }
 .container-text{
-    font-size: 1.4rem;
-    padding: .4rem;
-    margin: .2rem;
+    font-size: 1.2rem;
+    padding: .3rem;
 }
 .hidden{
     display: none;
@@ -160,7 +142,7 @@
 .fichas-container {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -171,8 +153,8 @@
 /* Fichas */
 .ficha {
     position: absolute;
-    width: 75%;
-    height: 80%;
+    width: 80%;
+    height: 80dvh;
     background: #c5a53c;
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -223,22 +205,39 @@ button {
     border-radius: 12px;
     cursor: pointer;
     transition: background 0.3s, transform 0.2s;
-    margin: .5rem;
+    margin: .8rem;
     width: 200px;
+    color: #f2f2f2;
+    background-color: #423826;
 }
-
+.accept-btn {
+    padding: 10px 20px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+    margin: .8rem;
+    width: 200px;
+    color: #f2f2f2;
+    background-color: #423826;
+}
 button:hover {
     background: #1d315c;
     color: rgb(255, 233, 233);
 }
-
 button:active {
     transform: scale(0.95);
 }
-.hidden{
-    display: none;
+.terminal-button{
+    grid-row: 2/3;
+    margin: 0 auto;
+    background-color: #d4850f;
+    border-radius: 22px;
+    border: none;
 }
-.final-text, .mes-text , .years-text{
+.mes-text ,.years-text{
     padding: .5rem;
     margin-top: 1.8rem;
     font-weight: 600;
@@ -251,16 +250,23 @@ button:active {
     font-weight: 700;
     color: #020202;
 }
-.contenedor-final, .contenido-mes , .contenido-years{
+.contenido-a-consultar,.datos-consulta-container,.contenido-mes , .contenido-years{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    align-items: flex-start;
     width: 100%;
-    height: 85%;
+    height: 100%;
     padding: 2.5rem;
     background-color: #e9bb24;
+    border-radius: 0px;
     border-bottom-right-radius: 14px;
     border-bottom-left-radius: 14px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: center;
+}
+.hidden{
+    display: none;
 }
 
 
